# QWApp

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  SettingsDialog.cpp  SettingsDialog.h  com._404coding.qwapp.desktop  com._404coding.qwapp.metainfo.xml  com._404coding.qwapp.yml  main.cpp  resources.qrc  webpage.cpp  webpage.h
